syntax = "proto3";

package request;

option go_package = "https://github.com/lucasfth/disys-active-replication;request";

service BiddingService{
    rpc Handshake (ClientHandshake) returns (stream BidResponse) {}
    rpc SendBid (Bid) returns (stream BidResponse) {}
}

message ClientHandshake {
    int32 clientPort = 1;
    string name = 2;
}

message Bid{
    string name = 1;
}

message BidResponse{
     int32 response = 1; 
}